--- a/templates/dashboard/expert.html.twig
+++ b/templates/dashboard/expert.html.twig
@@ -26,7 +26,7 @@
             <div class="card-grid row no-gutters border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
                 <div class="col p-4 d-flex flex-column position-static">
                     <strong class="d-inline-block mb-2 text-primary">Управление</strong>
-                    <h3 class="mb-0">Критерии качества</h3>
+                    <h3 class="mb-0">Стандарты оказания МП</h3>
                     {# <div class="mb-1 text-muted">Nov 12</div> #}
                     {# <p class="card-text mb-auto">This is a wider card with supporting text below as a natural lead-in to additional content.</p> #}
 
