--- a/templates/grid/sluch_expert.html.twig
+++ b/templates/grid/sluch_expert.html.twig
@@ -1,5 +1,6 @@
 <div class="d-flex flex-column" style="flex:1">
     <h5></h5>
+    <a href="{{ path('doctor_show_std') }}" class="btn btn-sm btn-first mb-2">Открыть стандарт</a>
     <table class="table table-striped table-bordered w-100">
         <thead>
         <tr>
