--- a/templates/grid/doctor.html.twig
+++ b/templates/grid/doctor.html.twig
@@ -91,6 +91,7 @@
                 var $modal = $(this).find('.modal-body');
                 $(this).find('h5 > span').html('- Группа критериев ' + kritZag);
 
+
                 $.ajax({
                     type: 'POST',
                     url: '{{ path('doctor_expert_by_sluch_ajax') }}',
@@ -100,6 +101,8 @@
                     success: function (data) {
                         $modal.html(data);
                         $modal.find('h5').html(button.data('std'));
+                        let $link =$modal.find('a');
+                        $link.prop('href', $link.prop('href') + '?expStd=' + button.data('id-std'));
                     }
                 });
             });
@@ -165,7 +168,8 @@
                                 '<button class="btn '+colorClass+' py-1 px-2" data-toggle="modal" ' +
                                 'data-target="#expertModal" data-id="' + data.id + '" title="Экспертное заключение"' +
                                 ' data-krit-zag="' + data.krit_zag +'"'+
-                                ' data-std="' + data.std +'">'+
+                                ' data-std="' + data.std +'"'+
+                                ' data-id-std="' + data.id_std +'">'+
                                 '<svg width="24px" height="24px" aria-hidden="true" focusable="false" data-prefix="fad" data-icon="tasks" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" class="svg-inline--fa fa-tasks fa-w-16 fa-3x"><g class="fa-group"><path fill="currentColor" d="M496 384H208a16 16 0 0 0-16 16v32a16 16 0 0 0 16 16h288a16 16 0 0 0 16-16v-32a16 16 0 0 0-16-16zm0-320H208a16 16 0 0 0-16 16v32a16 16 0 0 0 16 16h288a16 16 0 0 0 16-16V80a16 16 0 0 0-16-16zm0 160H208a16 16 0 0 0-16 16v32a16 16 0 0 0 16 16h288a16 16 0 0 0 16-16v-32a16 16 0 0 0-16-16z" class="fa-secondary"></path><path fill="currentColor" d="M139.61 35.5a12 12 0 0 0-17 0L58.93 98.81l-22.7-22.12a12 12 0 0 0-17 0L3.53 92.41a12 12 0 0 0 0 17l47.59 47.4a12.78 12.78 0 0 0 17.61 0l15.59-15.62L156.52 69a12.09 12.09 0 0 0 .09-17zm0 159.19a12 12 0 0 0-17 0l-63.68 63.72-22.7-22.1a12 12 0 0 0-17 0L3.53 252a12 12 0 0 0 0 17L51 316.5a12.77 12.77 0 0 0 17.6 0l15.7-15.69 72.2-72.22a12 12 0 0 0 .09-16.9zM64 368c-26.49 0-48.59 21.5-48.59 48S37.53 464 64 464a48 48 0 0 0 0-96z" class="fa-primary"></path></g></svg>'+
                                 '</button>' +
                                 '<a href="/doctor/newsluch/' + data.id+ '" class="btn btn-first py-1 px-2 ml-2" title="Редактировать случай лечения">' +
