--- a/templates/dashboard/expert.html.twig
+++ b/templates/dashboard/expert.html.twig
@@ -44,8 +44,6 @@
                 </div>
             </div>
         </div>
-    </div>
-    <div class="row mb-2">
         <div class="col-md-6">
             <div class="card-grid row no-gutters border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
                 <div class="col p-4 d-flex flex-column position-static">
@@ -55,9 +53,26 @@
                     <a href="{{ path('ws_expertise', {'trailingSlash' : '/'}) }}?wsdl" target="_blank" class="stretched-link"></a>
                 </div>
                 <div class="col-auto d-none d-lg-block">
-                    <img src="{{ asset('/img/icon/api.png') }}" height="110px"/>
+                    <img src="{{ asset('/img/icon/api.png') }}" height="125px"/>
                 </div>
             </div>
+        </div>
+    </div>
+
+    <div class="row mb-2">
+        <h2 style="margin: auto; padding: 10px; padding-bottom: 15px">Количество случаев с дефектами оказания МП</h2>
+        <div class="col-md-12">
+            <div id="main" style="width: 100%;height:500px;"></div>
+            <script type="text/javascript">
+                // based on prepared DOM, initialize echarts instance
+                var myChart = echarts.init(document.getElementById('main'));
+
+                // specify chart configuration item and data
+                option = JSON.parse('{{ stat|raw }}')
+
+                // use configuration item and data specified to show chart
+                myChart.setOption(option);
+            </script>
         </div>
     </div>
 {% endblock %}
