--- a/templates/dashboard/expert.html.twig
+++ b/templates/dashboard/expert.html.twig
@@ -78,26 +78,31 @@
                     <a href="{{ path('ws_expertise', {'trailingSlash' : '/'}) }}?wsdl" target="_blank" class="stretched-link"></a>
                 </div>
                 <div class="col-auto d-none d-lg-block">
-                    <img src="{{ asset('/img/icon/api.png') }}" height="110px"/>
+                    <img src="{{ asset('/img/icon/api.png') }}" height="125px"/>
                 </div>
             </div>
         </div>
-    </div>
+        <div class="col-md-6">
+            <div class="card-grid row no-gutters border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
+                <div class="col p-4 d-flex flex-column position-static">
+                    <strong class="d-inline-block mb-2 text-success">Просмотреть</strong>
+                    <h3 class="mb-0">Отчеты</h3>
+                    {# <div class="mb-1 text-muted">Nov 12</div> #}
+                    {# <p class="card-text mb-auto">This is a wider card with supporting text below as a natural lead-in to additional content.</p> #}
 
-    <div class="row mb-2">
-        <h2 style="margin: auto; padding: 10px; padding-bottom: 15px">Количество случаев с дефектами оказания МП</h2>
-        <div class="col-md-12">
-            <div id="main" style="width: 100%;height:500px;"></div>
-            <script type="text/javascript">
-                // based on prepared DOM, initialize echarts instance
-                var myChart = echarts.init(document.getElementById('main'));
-
-                // specify chart configuration item and data
-                option = JSON.parse('{{ stat|raw }}')
-
-                // use configuration item and data specified to show chart
-                myChart.setOption(option);
-            </script>
+                    <a href="{{ path('expert_report') }}" class="stretched-link"></a>
+                </div>
+                <div class="col-auto d-none d-lg-block" style="font-size: 35px">
+                    <svg class="bd-placeholder-img" width="100" height="125" xmlns="http://www.w3.org/2000/svg"
+                         role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice"
+                         focusable="false"><title>Placeholder</title>
+                        <rect width="100%" height="100%" fill="#17a2b8"></rect>
+                        <text x="50%" y="50%" fill="#eceeef" font-size="1em" font-weight="600"
+                              dominant-baseline="middle" text-anchor="middle">&telrec;
+                        </text>
+                    </svg>
+                </div>
+            </div>
         </div>
     </div>
 {% endblock %}
