--- a/templates/dashboard/expert.html.twig
+++ b/templates/dashboard/expert.html.twig
@@ -85,7 +85,7 @@
         <div class="col-md-6">
             <div class="card-grid row no-gutters border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
                 <div class="col p-4 d-flex flex-column position-static">
-                    <strong class="d-inline-block mb-2 text-success">Просмотреть</strong>
+                    <strong class="d-inline-block mb-2 text-info">Просмотреть</strong>
                     <h3 class="mb-0">Отчеты</h3>
                     {# <div class="mb-1 text-muted">Nov 12</div> #}
                     {# <p class="card-text mb-auto">This is a wider card with supporting text below as a natural lead-in to additional content.</p> #}
@@ -97,7 +97,7 @@
                          role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice"
                          focusable="false"><title>Placeholder</title>
                         <rect width="100%" height="100%" fill="#17a2b8"></rect>
-                        <text x="50%" y="50%" fill="#eceeef" font-size="1em" font-weight="600"
+                        <text x="50%" y="50%" fill="#eceeef" font-size="2em" font-weight="600"
                               dominant-baseline="middle" text-anchor="middle">&telrec;
                         </text>
                     </svg>
