--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -5,7 +5,7 @@
 {% block substylesheets %}
     <link rel="stylesheet" href="{{ asset('css/login.css') }}"/>{% endblock %}
 
-{% block body_class %}{% endblock %}
+{% block body_class %}position-relative{% endblock %}
 
 {% block body %}
     <form method="post" class="form-login">
@@ -44,5 +44,17 @@
         </div>
 
         <button class="btn btn-lg btn-first btn-block" type="submit">Войти</button>
+
     </form>
+{% endblock %}
+
+{% block test %}
+<div class="position-absolute text-muted text-small" style="bottom: 0;
+    left: 0;
+    right: 0;
+    text-align: center;">
+    Данные для входа:<br>
+    Роль врача <code>doctor</code> - <code>doctor</code><br>
+    Роль врача-эксперта <code>expert</code> - <code>expert</code><br>
+</div>
 {% endblock %}
